--- a/index.html
+++ b/index.html
@@ -5,6 +5,121 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <header class="header content-section">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#"> главная </a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#"> посмотреть лоты </a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#"> об аукционе </a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип компании"
+        />
+      </a>
+      <address class="address">
+        <a href="tel:+99995555555"> +9 999 555 5555 </a>
+        <a href="mailto:info@sobaka.ge"> info@sobaka.ge </a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+    </header>
+    <section class="cover content-section">
+      <div class="overlay"></div>
+      <h1 class="cover__title">
+        <span class="aligned-text">
+          о
+          <span class="letter-spacing-extended">н</span>
+          о
+        </span>
+        <span class="aligned-text aligned-text_center"
+          >т е
+          <span class="letter-spacing-extended"> б</span>
+          е
+        </span>
+        <span class="aligned-text aligned-text_righ">
+          <span class="letter-spacing-extended">н</span>
+          а д о
+        </span>
+      </h1>
+      <section class="cover__description">
+        <h2 class="cover__description-text">
+          Аукцион вещей, в которые никто не верил
+        </h2>
+        <button class="bet-button">Сделать ставку</button>
+      </section>
+    </section>
+    <section class="lots content-section">
+      <h2 class="lots__heading">Лоты</h2>
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item card_type_film">
+          <div class="overlay"></div>
+          <a class="card-link" href="#">
+            <article class="card">
+              <h2 class="card__title">
+                Фильм режиссёра, который бросил киношколу
+              </h2>
+              <p class="card__text header__link_active">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item card_type_book">
+          <div class="overlay"></div>
+          <a class="card-link" href="#">
+            <article class="card">
+              <h2 class="card__title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </h2>
+              <p class="card__text header__link_active">
+                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                переходами на древнеанглийский. В ней одновременно
+                рассказывается о 16 июня 1904 года и об истории литературы,
+                начиная с античных времён. И это всё накладывается на эпическую
+                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
+                Джойса?
+              </p>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item card_type_picture">
+          <div class="overlay"></div>
+          <a class="card-link" href="#">
+            <article class="card">
+              <h2 class="card__title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </h2>
+              <p class="card__text header__link_active">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                котиков… Сколько бы вы на такое поставили, если бы не знали, что
+                это — одна из революционных работ Кандинского?
+              </p>
+            </article>
+          </a>
+        </li>
+      </ul>
+      <a class="lots__look-more-link" href="#"> 
+        посмотреть больше
+      </a>
+    </section>
+    <section class="about content-section"></section>
+    <footer content-section></footer>
+  </body>
 </html>
