--- a/index.html
+++ b/index.html
@@ -120,33 +120,91 @@
         <a class="lots__look-more-link" href="#"> посмотреть больше </a>
       </section>
       <section class="about content-section">
-          <div class="about__logo">
-            <img
-              class="about__logo-image"
-              src="./images/logo-white.svg"
-              alt="Логотип"
-            />
-          </div>
-          <div class="about__column">
-            <h2 class="about__title">Об аукционе</h2>
-            <p class="about__text">
-              Здесь вы не встретите очередное пафосное собрание невероятно
-              дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
-              один аукцион. Потому что кому нужен дневник девочки-подростка или
-              картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-              странные вещи, созданные любителями?
-            </p>
-            <p class="about__text">
-              Слишком сложные или, наоборот, слишком простые. Опережающие своё
-              время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-              Когда-то они казались просто неудачными. Но, несмотря на критику,
-              кажущуюся простоту или сложность, сейчас без этих лотов невозможно
-              представить современную культуру. Когда в эти вещи не верил никто,
-              продолжали верить их создатели. И сейчас эти лоты стали культовыми.
-            </p>
+        <div class="about__logo">
+          <img
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="Логотип"
+          />
+        </div>
+        <div class="about__column">
+          <h2 class="about__title">Об аукционе</h2>
+          <p class="about__text">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about__text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
         </div>
       </section>
     </main>
-    <footer content-section></footer>
+    <footer class="footer" content-section>
+      <address class="address">
+        <a href="tel:+99995555555"> +9 999 555 5555 </a>
+        <a href="mailto:info@sobaka.ge"> info@sobaka.ge </a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <nav class="footer__menu header__menu">
+        <ul class="footer__menu-list header__links-list">
+          <li
+            class="footer__menu-list-item header__links-list-item header__links-list-item_no-bullit"
+          >
+            <a
+              class="footer__menu-link header__link header__link_active"
+              href="#"
+            >
+              главная
+            </a>
+          </li>
+          <li class="footer__menu-list-item header__links-list-item">
+            <a class="footer__menu-link header__link" href="#">
+              посмотреть лоты
+            </a>
+          </li>
+          <li class="footer__menu-list-item header__links-list-item">
+            <a class="footer__menu-link header__link" href="#"> об аукционе </a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list-item">
+        <li class="footer__social-link">
+          <a class="footer__social-list" href="#">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="YouTube"
+            />
+          </a>
+        </li>
+        <li class="footer__social-link">
+          <a class="footer__social-list" href="#">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Вконтакте"
+            />
+          </a>
+        </li>
+        <li class="footer__social-link">
+          <a class="footer__social-list" href="#">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="pinterest"
+            />
+          </a>
+        </li>
+      </ul>
+      <img src="" alt="" />
+    </footer>
   </body>
 </html>
