--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
   <body>
     <header class="header content-section">
-      <nav class="header__menu">
-        <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link_active" href="#"> главная </a>
+      <nav class="menu">
+        <ul class="links-list">
+          <li class="links-list-item links-list-item_no-bullit">
+            <a class="link link_active" href="#"> главная </a>
           </li>
-          <li class="header__links-list-item">
-            <a class="header__link" href="#"> посмотреть лоты </a>
+          <li class="links-list-item">
+            <a class="link" href="#"> посмотреть лоты </a>
           </li>
-          <li class="header__links-list-item">
-            <a class="header__link" href="#"> об аукционе </a>
+          <li class="links-list-item">
+            <a class="link" href="#"> об аукционе </a>
           </li>
         </ul>
       </nav>
@@ -42,26 +42,24 @@
       <section class="cover content-section">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">
-            о
-            <span class="letter-spacing-extended">н</span>
-            о
+          <span class="aligned-text"
+            >о<span class="letter-spacing-extended">но</span>
           </span>
           <span class="aligned-text aligned-text_center"
-            >т е
-            <span class="letter-spacing-extended"> б</span>
-            е
+            >те<span class="letter-spacing-extended">бе</span>
           </span>
           <span class="aligned-text aligned-text_righ">
-            <span class="letter-spacing-extended">н</span>
-            а д о
+            <span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            >
           </span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button type="submit" class="bet-button">Сделать ставку</button>
+          <button type="button" class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots content-section">
@@ -71,9 +69,9 @@
             <a class="card-link" href="#">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h2 class="card__title">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h2>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -86,9 +84,9 @@
             <a class="card-link" href="#">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h2 class="card__title">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h2>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -104,9 +102,9 @@
             <a class="card-link" href="#">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <h2 class="card__title">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h2>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -153,31 +151,24 @@
         <a href="mailto:info@sobaka.ge"> info@sobaka.ge </a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
-      <nav class="footer__menu header__menu">
-        <ul class="footer__menu-list header__links-list">
+      <nav class="footer__menu menu">
+        <ul class="footer__menu-list links-list">
           <li
-            class="footer__menu-list-item header__links-list-item header__links-list-item_no-bullit"
+            class="footer__menu-list-item links-list-item links-list-item_no-bullit"
           >
-            <a
-              class="footer__menu-link header__link header__link_active"
-              href="#"
-            >
-              главная
-            </a>
+            <a class="footer__menu-link link link_active" href="#"> главная </a>
           </li>
-          <li class="footer__menu-list-item header__links-list-item">
-            <a class="footer__menu-link header__link" href="#">
-              посмотреть лоты
-            </a>
+          <li class="footer__menu-list-item links-list-item">
+            <a class="footer__menu-link link" href="#"> посмотреть лоты </a>
           </li>
-          <li class="footer__menu-list-item header__links-list-item">
-            <a class="footer__menu-link header__link" href="#"> об аукционе </a>
+          <li class="footer__menu-list-item links-list-item">
+            <a class="footer__menu-link link" href="#"> об аукционе </a>
           </li>
         </ul>
       </nav>
-      <ul class="footer__social-list-item">
-        <li class="footer__social-link">
-          <a class="footer__social-list" href="#">
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon"
               src="./images/yt.svg"
@@ -185,8 +176,8 @@
             />
           </a>
         </li>
-        <li class="footer__social-link">
-          <a class="footer__social-list" href="#">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon"
               src="./images/vk.svg"
@@ -194,8 +185,8 @@
             />
           </a>
         </li>
-        <li class="footer__social-link">
-          <a class="footer__social-list" href="#">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon"
               src="./images/pinterest.svg"
@@ -204,7 +195,6 @@
           </a>
         </li>
       </ul>
-      <img src="" alt="" />
     </footer>
   </body>
 </html>
