--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer" content-section>
+    <footer class="footer content-section">
       <address class="address">
         <a href="tel:+99995555555"> +9 999 555 5555 </a>
         <a href="mailto:info@sobaka.ge"> info@sobaka.ge </a>
